--- a/package.json
+++ b/package.json
@@ -64,10 +64,12 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.3.11",
     "prettier": "^2.2.1",
     "rollup": "^2.35.1",
     "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.1",
     "rollup-plugin-typescript2": "^0.29.0",
     "typescript": "^4.0.3"
   },
