refactor: rename project

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-meu-id",
+  "name": "reactjs-meu-id",
   "version": "1.0.0",
   "description": "Componente para implementar meuId em sua aplicação react",
   "author": "Mateus Andriola <mateusandriola18@gmail.com>",
